<resources>
    <string name="app_name">TimeManager</string>
    <string name="time_manager">Time Manager</string>
    <string name="saying">Self-discipline makes freedom</string>
    <string name="id_number">Id Number: </string>
    <string name="hint_id_number">Please enter id number</string>
    <string name="password">Password:</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="occupation">Occupation: </string>
    <string name="please_enter_occupation">please enter occupation</string>
    <string name="password_again">Please enter password again</string>
    <string name="please_enter_6_integers_eg_111111"> eg: 111111(6 integers)</string>
    <string name="goals">Goals: </string>
    <string name="please">Please choose a date</string>
    <string name="add_task">Add task</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="task">task</string>
    <string name="completion_status">Completion status</string>
    <string name="title_activity_design">design</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tasks">Task:</string>
    <string name="end_times">End Time:</string>
    <string name="start_times">Start Time:</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_task">Please enter task</string>
    <string name="please_enter_end_time">Please enter end time</string>
    <string name="please_enter_start_time">Please enter start time</string>
    <string name="unfinished">UNFINISHED</string>
    <string name="timerule">Please use the 24-hour schedule</string>
    <string name="sql1">insert into information (id, password, occupation, goal, scores) values (?, ?, ?, ?. ?)</string>
    <string name="remember_password">Remember Password</string>
    <string name="automatic_login">Automatic Login</string>
    <string name="logining">Login...</string>
    <string name="log_out">Log out</string>
    <string name="back">Back</string>
    <string name="b">Back</string>
    <string name="if_the_thing_is_really_important_please_click">If the thing is really important, please click</string>
    <string name="here">here</string>
    <string name="to_set_a_system_alarm">to set a system alarm (You can only set an alarm clock for a week)</string>
    <string name="use_30_scores_to_change_the_skin">Change the skin with 30 points</string>
    <string name="luck_draw_with_15_points">Luck draw with 5 points</string>
    <string name="title_activity_luckdraw">luckdraw</string>
    <string name="bridge">Bridge</string>
    <string name="water">Water</string>
    <string name="blue">Blue</string>
    <string name="ranking_list">Ranking List</string>
    <string name="welcome">Welcome to login!!</string>
    <string name="please_connect_the_internet_and_restart_time_manager">Please connect the internet and restart Time Manager!</string>
</resources>