<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:text="@string/time_manager"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_gravity="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/saying"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_gravity="end"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/PasswordLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true"
            android:paddingBottom="20sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/password"
                />

            <EditText
                android:id="@+id/MainPassword"
                android:layout_width="200sp"
                android:layout_height="33sp"
                android:inputType="textPassword"
                android:padding="5sp"
                android:fontFamily="serif"
                android:textSize="15sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:hint="@string/please_enter_password"
                android:importantForAutofill="no"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/PasswordLine"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="100sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/id_number" />

            <EditText
                android:id="@+id/MainID"
                android:layout_width="200sp"
                android:layout_height="33sp"
                android:padding="5sp"
                android:textSize="15sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:hint="@string/hint_id_number"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/PasswordLine"
            android:id="@+id/checkboxline"
            android:orientation="horizontal"
            android:layout_marginTop="20sp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rememberPassword"
                android:text="@string/remember_password"
                android:textColor="@color/white"
                android:textSize="12sp"
               />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/autoLogin"
                android:text="@string/automatic_login"
                android:textColor="@color/white"
                android:textSize="12sp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxline"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="40sp">

            <Button
                android:id="@+id/register"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:fontFamily="serif"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="14sp"
                android:visibility="visible"
                tools:visibility="visible"
                tools:ignore="ButtonStyle" />

            <Button
                android:textSize="14sp"
                android:background="@drawable/buttonshape"
                android:id="@+id/login"
                android:fontFamily="serif"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login"
                android:layout_marginStart="40sp"
                android:gravity="center"
                android:layout_marginLeft="40sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>