<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerMain"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/bg">
    <Button
        android:layout_marginTop="10sp"
        android:id="@+id/rBack"
        android:layout_width="wrap_content"
        android:layout_height="17sp"
        android:layout_gravity="right"
        android:background="@drawable/buttonshape2"
        android:gravity="right"
        android:paddingRight="10sp"
        android:textSize="12sp"
        android:text="@string/back"
        android:textColor="@color/white"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:paddingEnd="10sp"  />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83sp"
        android:text="@string/time_manager"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/saying"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/OccupationLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/occupation"
                />

            <EditText
                android:id="@+id/occupation"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="5sp"
                android:fontFamily="serif"
                android:textSize="13sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:hint="@string/please_enter_occupation"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goalsLine"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_below="@id/OccupationLine">

            <TextView
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/goals"
                 />

            <Spinner
                android:id="@+id/goals"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:dropDownWidth="200sp"
                android:padding="5sp"
                android:textSize="13sp"
                android:background="@drawable/normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password2Line"
            android:layout_above="@id/OccupationLine"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="20sp">

            <TextView
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/password"
                />

            <EditText
                android:id="@+id/password2"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:textSize="13sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password1Line"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/password2Line"
            android:orientation="horizontal"
            android:layout_marginTop="20sp">

            <TextView
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/password"
                />

            <EditText
                android:id="@+id/password1"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:textSize="13sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:hint="@string/please_enter_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/password1Line"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp">

            <TextView
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/id_number"
                />

            <EditText
                android:id="@+id/id"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:textSize="13sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:hint="@string/please_enter_6_integers_eg_111111"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>


        <Button
            android:layout_marginTop="50sp"
            android:layout_below="@id/goalsLine"
            android:layout_centerHorizontal="true"
            android:id="@+id/register"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="95sp"
            android:layout_marginLeft="95sp"
            android:background="@drawable/buttonshape"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:visibility="visible"
            tools:ignore="ButtonStyle" />


    </RelativeLayout>


</LinearLayout>
