<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/bg">
  <RelativeLayout
      android:layout_marginTop="10sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginRight="10sp"
      android:layout_marginEnd="10sp"
      android:layout_marginLeft="10sp"
      android:layout_marginStart="10sp">
    <TextView
        android:id="@+id/addID"
        android:layout_width="match_parent"
        android:layout_height="17sp"
        android:textColor="@color/white"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:gravity="top"
        android:textSize="12sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
      <Button
          android:id="@+id/aBack"
          android:layout_width="wrap_content"
          android:layout_height="17sp"
          android:layout_alignParentRight="true"
          android:layout_alignParentEnd="true"
          android:background="@drawable/buttonshape2"
          android:gravity="right"
          android:paddingRight="5sp"
          android:textSize="12sp"
          android:text="@string/back"
          android:textColor="@color/white"
          tools:ignore="RelativeOverlap,RtlSymmetry"
          android:paddingEnd="5sp" />
  </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83sp"
        android:text="@string/time_manager"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/saying"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/TaskLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true"
            android:paddingBottom="35sp"
            >

            <TextView
                android:id="@+id/tText"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/tasks"
                 />

            <EditText
                android:id="@+id/addTask"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="5sp"
                android:fontFamily="serif"
                android:textSize="12sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:hint="@string/please_enter_task"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_above="@id/TaskLine"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tEnd"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/end_times"
                />

            <EditText
                android:id="@+id/addEnd"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:padding="5sp"
                android:fontFamily="serif"
                android:textSize="12sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:hint="@string/timerule"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password2Line"
            android:layout_above="@id/endLine"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tStart"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/start_times" />

            <EditText
                android:id="@+id/addStart"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:textSize="12sp"
                android:background="@drawable/normal"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:hint="@string/timerule"
                android:inputType="time"
                android:importantForAutofill="no" />
        </LinearLayout>


        <Button
            android:layout_marginTop="50sp"
            android:layout_below="@id/TaskLine"
            android:layout_centerHorizontal="true"
            android:id="@+id/confirm"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="95sp"
            android:layout_marginLeft="95sp"
            android:background="@drawable/buttonshape"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:visibility="visible"
            tools:ignore="ButtonStyle" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/alarm"
           >

            <TextView
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_the_thing_is_really_important_please_click"
                android:textColor="@color/white"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/here"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:background="@drawable/buttonshape2"
                android:text="@string/here"
                android:textColor="@color/white"
                />

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignBottom="@+id/here"
                    android:layout_alignEnd="@+id/here"
                    android:layout_alignStart="@+id/here"
                    android:background="@color/white"
                    android:minWidth="4dp"
                    android:layout_alignRight="@+id/here"
                    android:layout_alignLeft="@+id/here" />


            </RelativeLayout>


        </LinearLayout>
        <TextView
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_set_a_system_alarm"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20sp"
            />

    </RelativeLayout>


</LinearLayout>
