<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreMain"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/bg">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentTop="true"
    tools:ignore="UselessParent"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginStart="10sp">
    <TextView
        android:id="@+id/scoreID"
        android:layout_width="wrap_content"
        android:layout_height="17sp"
        android:textColor="@color/white"
        android:layout_marginLeft="5sp"
        android:gravity="top"
        android:textSize="12sp"
        android:layout_marginStart="5sp"
        />
    <TextView
        android:id="@+id/scores"
        android:layout_width="wrap_content"
        android:layout_height="17sp"
        android:gravity="top"
        android:textSize="12sp"
        android:layout_marginLeft="10sp"
        android:textColor="@color/white"
        android:layout_marginStart="10sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/scBack"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:background="@drawable/buttonshape2"
            android:layout_alignParentRight="true"
            android:paddingRight="5sp"
            android:textSize="12sp"
            android:text="@string/back"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap,RtlSymmetry"
            android:paddingEnd="5sp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>

<Button
    android:id="@+id/changeSkin"
    android:layout_width="300sp"
    android:layout_height="30sp"
    android:layout_centerInParent="true"
    android:background="@drawable/buttonshape"
    android:textColor="@color/white"
    android:text="@string/use_30_scores_to_change_the_skin"
    android:padding="6sp"
    />

<Button
    android:layout_marginTop="50sp"
    android:id="@+id/luckDraw"
    android:layout_width="300sp"
    android:layout_height="30sp"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/changeSkin"
    android:background="@drawable/buttonshape"
    android:textColor="@color/white"
    android:text="@string/luck_draw_with_15_points"
    android:padding="6sp"
    />

<Button
    android:layout_width="300sp"
    android:layout_height="30sp"
    android:layout_above="@+id/changeSkin"
    android:layout_centerHorizontal="true"
    android:background="@drawable/buttonshape"
    android:layout_marginBottom="50sp"
    android:text="@string/ranking_list"
    android:textColor="@color/white"
    android:id="@+id/rankList"

    />


</RelativeLayout>